--- a/main.html
+++ b/main.html
@@ -1,5 +1,5 @@
 <html>
-<body background="shutterstock_735034657.jpg">
+<body background="68369ec281338eedee0ac5f7c092dc49.jpg">
 <br>
 <br>
 <font size="10"><center>SIR RATAN TATA</center></font>
